--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="style.css" type="text/css" />
     <script src="createjs/easeljs.min.js" type="text/javascript"></script>
     <script src="createjs/tweenjs.min.js" type="text/javascript"></script>
-    <script src="../CordovaLib/cordova.js" type="text/javascript"></script>
+    <script src="cordova.js" type="text/javascript"></script>
     <script src="cordova_plugins.js" type="text/javascript"></script>
     <script src="script.js?2015" type="text/javascript"></script>
 </head>
