--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -11,7 +11,7 @@
     <script src="createjs/tweenjs.min.js" type="text/javascript"></script>
     <script src="cordova.js" type="text/javascript"></script>
     <script src="cordova_plugins.js" type="text/javascript"></script>
-    <script src="script.js?2015" type="text/javascript"></script>
+    <script src="script.js" type="text/javascript"></script>
 </head>
 <body>
 	<canvas id="easel" width="1536px" height="2008px">
