--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -11,6 +11,7 @@
     <script src="createjs/tweenjs.min.js" type="text/javascript"></script>
     <script src="cordova.js" type="text/javascript"></script>
     <script src="cordova_plugins.js" type="text/javascript"></script>
+    <script src="visual-assets.js" type="text/javascript"></script>
     <script src="script.js" type="text/javascript"></script>
 </head>
 <body>
