--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -16,6 +16,7 @@
 <body>
 	<canvas id="easel" width="1536px" height="2008px">
 	</canvas>
-  <a href="http://www.playdual.com" target="_blank"><div id="link"></div></a>
+  <a href="http://www.playdual.com" target="_blank"><div id="main"></div></a>
+  <a href="http://www.playdual.com/learn.html" target="_blank"><div id="learn"></div></a>
 </body>
 </html>
